# vinha

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  dev.ps1  dev.sh  firebase.json  firestore.rules  pyproject.toml  test.sh
.firebase/: hosting.ZnJvbnRlbmRcYnVpbGQ.cache
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 0cc75caa0957_create_user_table.py  fa238e632541_create_user_table.py
backend/: main.py  pyproject.toml  requirements.txt
backend/src/evinha/: config.py  firebase.py  main.py
backend/src/evinha/admin/: router.py
backend/src/evinha/auth/: dependencies.py  google.py  jwt.py  router.py
backend/src/evinha/fundraisers/: models.py  repository.py  router.py
backend/src/evinha/users/: models.py  repository.py
backend/tests/: conftest.py  fake_firestore.py  test_fundraisers.py
docs/: fundraisers.md
frontend/: .nycrc.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: coverage.ts  smoke.test.ts
frontend/scripts/: merge-coverage.mjs
frontend/src/: app.css  app.d.ts  app.html  service-worker.ts
frontend/src/lib/: api.test.ts  api.ts  auth.svelte.ts  firebase.ts
frontend/src/lib/components/: LangSwitcher.svelte
frontend/src/lib/components/fundraisers/: StatusBadge.svelte  StatusBadge.test.ts  SummaryCard.svelte  SummaryCard.test.ts
frontend/src/lib/i18n/: en-CA.json  i18n.test.ts  index.ts  pt-BR.json
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/fundraisers/: +page.svelte
frontend/src/routes/fundraisers/[eventId]/: +page.svelte
frontend/src/routes/fundraisers/[eventId]/cashier/: +page.svelte
frontend/src/routes/fundraisers/[eventId]/edit/: +page.svelte
frontend/src/routes/fundraisers/[eventId]/kitchen/: +page.svelte
frontend/src/routes/fundraisers/[eventId]/orders/[orderId]/: +page.svelte
frontend/src/routes/fundraisers/[eventId]/orders/new/: +page.svelte
frontend/src/routes/login/: +page.svelte
scripts/: setup-instance.sh  teardown-instance.sh
src/vinha/: auth.py  db.py  i18n.py  main.py  models.py
src/vinha/locales/: en.json  pt.json
src/vinha/pages/: home.py  login.py
