[project]
name = "evinha"
version = "0.1.0"
description = "Backend for e-Vinha"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.0",
    "firebase-admin>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
